Change history
--------------

Release Candidate 3
===================

- Fixed MR-168 
  "ValidateEmail attribute does not work properly in Monorail Scarfold"

- Introduced CacheAttribute which can be used on actions to configure 
  the underlying HttpCachePolicy

- Modified WizardActionProvider to use ControllerLifecycleExecutor

- Modified EngineContextModule a MonoRailHttpHandler to use ControllerLifecycleExecutor

- Refactored controller. Extracted process to ControllerLifecycleExecutor

- Changed ExecuteEnum.Always to include 'StartRequest'

- Added Filter step: StartRequest

  This step runs on the ResolveRequestCache, and is suitable 
  for authentication. However, a session will not be available.

- Fixed MR-158
  "IRequest/Controller must expose the Http method"
  
  Added the following properties to the Controller class:
    IsPost/IsGet/IsPut/IsHead

- Fixed problem with view components reported by Ernst Naezer. The problem
  is that the view component were cached, and instances shared during 
  template executions.

- Introduced smtpPort, smtpUsername, smtpPassword configuration to <monorail> node

- Introduced a PageSize property on the IPaginatedPage.


Release Candidate 2
===================

- Applied patch by Ivan Porto Carrero fixing MR-158
  "Validation throws errors when using group box."
  
  Quoting description:
  
	"When validating with the option of using a group box then the valdation routine throws an error.
	The error is only thrown after the valdation failed for a couple of controls in the form. And when those errors are corrected and the form gets validated again that's when the error occurs

	"I also added functionality to have a header in the group error box. I also added the possibility to have a separate error label to append to.
	For this I added 2 properties to the config of the validation library.
	The first property is boxErrorHeadingClass and the second one is errorSelectorCssClass
